--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     depends_on:
       - postgres
     volumes:
-      - ./src/:/app/src:ro
+      - .:/app
       - cargo-cache:/usr/local/cargo/registry
       - target-cache:/app/target
 
