--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.18"
+diesel = "2.1.0"
+diesel-async = { version = "0.3.1", features = ["postgres"] }
 tokio = { version = "1.29.1", features = ["full"] }
