--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 axum = "0.6.18"
 diesel = "2.1.0"
 diesel-async = { version = "0.3.1", features = ["postgres"] }
+serde = { version = "1.0.171", features = ["derive"] }
+serde_json = "1.0.102"
 tokio = { version = "1.29.1", features = ["full"] }
