--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,13 @@ name = "planner"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[workspace]
+members = [
+    ".",
+    "http",
+    "domain",
+]
 
 [dependencies]
-axum = "0.6.18"
-diesel = "2.1.0"
-diesel-async = { version = "0.3.1", features = ["postgres"] }
-serde = { version = "1.0.171", features = ["derive"] }
-serde_json = "1.0.102"
-tokio = { version = "1.29.1", features = ["full"] }
+planner-http = { path = "http" }
