--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 argon2 = { version = "0.5.1", features = ["std"] }
+chrono = "0.4.26"
 diesel = { version = "2.1.0", features = ["extras"] }
 diesel-async = { version = "0.3.1", features = ["postgres"] }
 thiserror = "1.0.43"
